@@ -1,2 +1,2 @@
 
-Please visit http://lucene.apache.org/pylucene/jcc/documentation/install.html
+Please see doc/jcc/documentation/install.html
