@@ -1,2 +1,2 @@
 
-Please visit http://lucene.apache.org/pylucene/jcc/documentation/readme.html
+Please see doc/jcc/documentation/readme.html
